--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             maxZoom: 18, attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy;<a href="https://carto.com/attribution">CARTO</a>'
         }).addTo(map);
 
+        $.getJSON('project-data/confederate_symbols.geojson', function(data){
+
+
+
+
+            
+            L.geoJson(data).addTo(map)
+        });
+
 
     
     </script>
