--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             L.geoJson(data).addTo(map)
         });
 
+        $.getJSON('data/congdist.json', function(data) {
+            L.geoJson(data).addTo(map)
+        });
+
 
     
     </script>
