--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
             maxZoom: 18, attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy;<a href="https://carto.com/attribution">CARTO</a>'
         }).addTo(map);
 
-        $.getJSON('project-data/confederate_symbols.geojson', function(data){
 
-            L.geoJson(data).addTo(map)
-        });
-
-        $.getJSON('data/congdist.json', function(data) {
+        $.getJSON('data/bundled.json', function(data) {
             L.geoJson(data).addTo(map)
         });
 
