--- a/index.html
+++ b/index.html
@@ -36,9 +36,20 @@
         }).addTo(map);
 
 
-        $.getJSON('data/bundled.json', function(data) {
-            L.geoJson(data).addTo(map)
+        $.when(
+            $.getJSON('data/districts.json'),
+            $.getJSON('data/symbols.json')
+        ).done(function(districts, symbols) {
+            makeMap(districts, symbols)
         });
+
+        function makeMap(districts, symbols) {
+            
+
+            L.geoJson(districts).addTo(map);
+            L.geoJson(symbols).addTo(map);
+
+        }
 
 
     
