--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             zoom: 4
         });
 
+        var outline = {
+            color : '#ffffff',
+            weight : 1
+        }
+
         L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/voyager_nolabels/{z}/{x}/{y}.png', {
             maxZoom: 18, attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy;<a href="https://carto.com/attribution">CARTO</a>'
         }).addTo(map);
@@ -50,6 +55,7 @@
             
 
           var dataLayer =  L.geoJson(districts,{
+                style: outline,
                 onEachFeature: function (feature, layer) {
                     var tip= "<h3> <b># Confederate Monuments</b>: " + feature.properties.join_count + "<h3>"
                     layer.bindTooltip(tip);
