fix getColor conditional

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
         var outline = {
             color: '#ffffff',
-            weight: 1
+            weight: 1,
+            fillOpacity: 1
         }
 
         L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/voyager_nolabels/{z}/{x}/{y}.png', {
@@ -85,22 +86,18 @@
                 if (value > 0) values.push(value); //removing 0 because it will be coded on its own
             });
 
-            console.log(values);
-
             var clusters = ss.ckmeans(values, 5); //group data into similar clusters using ckmeans
             var breaks = clusters.map(function (cluster) {
-                console.log(cluster);
                 return [cluster[0], cluster.pop()]; //create an array of the lowest and highest value of each cluster
             });
-
-            console.log(breaks);
 
             return breaks;
 
         };
 
         function getColor(d, breaks) { //assign color based on break
-            if (d = 0) {
+     
+            if (d == 0) {
                 return '#f3e79b';
             } else if (d <= breaks[0][1]) {
                 return '#f8a07e';
@@ -111,8 +108,9 @@
             } else if (d <= breaks[3][1]) {
                 return '#a059a0';
             } else if (d <= breaks[4][1]) {
-                return '#5c53a5'
+                return '#5c53a5';
             }
+
         }; //end getColor function
     </script>
 
