added variable to hold icons

--- a/index.html
+++ b/index.html
@@ -41,6 +41,30 @@
             fillOpacity: 1
         }
 
+        var roadway = L.icon({
+            iconUrl: 'icons/car-15.svg'
+        });
+
+        var school = L.icon({
+            iconUrl: 'icons/school-15.svg'
+        });
+
+        var monument = L.icon({
+            iconUrl: 'icons/landmark-15.svg'
+        });
+
+        var courthouse = L.icon({
+            iconUrl: 'icons/town-hall-15.svg'
+        });
+
+        var county = L.icon({
+            iconUrl: 'icons/triangle-15.svg'
+        });
+
+        var other = L.icon({
+            iconUrl: 'icons/circle-15.svg'
+        });
+
         // make global for access later
         var choroLayer;
 
