--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
             fillOpacity: 1
         }
 
-        var roadway = L.icon({
+        var roadway = new L.Icon({
             iconUrl: 'icons/car-15.svg'
         });
 
-        var school = L.icon({
+        var school = new L.Icon({
             iconUrl: 'icons/school-15.svg'
         });
 
-        var monument = L.icon({
+        var monument = new L.Icon({
             iconUrl: 'icons/landmark-15.svg'
         });
 
-        var courthouse = L.icon({
+        var courthouse = new L.Icon({
             iconUrl: 'icons/town-hall-15.svg'
         });
 
-        var county = L.icon({
+        var county = new L.Icon({
             iconUrl: 'icons/triangle-15.svg'
         });
 
-        var other = L.icon({
+        var other = new L.Icon({
             iconUrl: 'icons/circle-15.svg'
         });
 
