--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             choroLayer.eachLayer(function (layer) { //loop through each layer
                 var props = layer.feature.properties
                 layer.setStyle({ //assign a style to each layer
-                    fillColor: getColor(props.join_count/props.ALAND, breaks) //assign a fill color based on the getColor function
+                    fillColor: getColor(props.join_count, breaks) //assign a fill color based on the getColor function
                 }); //for each layer style the break based on the getColor function
             }).addTo(map);
 
@@ -173,7 +173,7 @@
 
             choroLayer.eachLayer(function (layer) { //loop through each layer
                 var props = layer.feature.properties;
-                var value = props.join_count/props.ALAND; //get join count value and push to array
+                var value = props.join_count; //get join count value and push to array
                 if (value > 0) values.push(value); //removing 0 because it will be coded on its own
             });
 
@@ -211,7 +211,7 @@
             legend.onAdd = function (map) {
                 var div = L.DomUtil.create('div', 'legend'); // create a div with a class "info"
 
-                var legendInfo = '<h2 class="txt-h4 mb24">Number of Confederate Monuments  per 1,000 square miles by Congressional District</h2>',
+                var legendInfo = '<h2 class="txt-h4 mb24">Number of Confederate Monuments by Congressional District</h2>',
                     classInfo;
 
                 legendInfo += '<div data-value="0"><span style="background:' + 
@@ -222,7 +222,7 @@
   
                     classInfo = '<div data-value="' + nums[1] + ''+'"><span style="background:' + 
                                 getColor(nums[1], breaks) + '"></span>' +  
-                                Math.round(nums[0]*100000000000) + ' &mdash; ' + Math.round(nums[1]*100000000000) + '</div>';
+                                nums[0] + ' &mdash; ' + nums[1] + '</div>';
                     
                     legendInfo += classInfo
                 });
@@ -262,7 +262,7 @@
             choroLayer.eachLayer(function(layer) {
                 
                 var props = layer.feature.properties;
-                var counts = (props.join_count/props.ALAND)*5**10;
+                var counts = props.join_count;
 
                 if(counts >= highLightRange[0] && counts <= highLightRange[1]) {
                     // don't do anything
