--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             legend.onAdd = function (map) {
                 var div = L.DomUtil.create('div', 'legend'); // create a div with a class "info"
 
-                var legendInfo = '<h2 class="txt-h4 mb24">Number of Confederate Monuments by Congressional District</h2>',
+                var legendInfo = '<h2 class="txt-h4 mb24">Number of Confederate Monuments by Congressional District</h2><p>*Note these data use raw counts of monuments per district</p>',
                     classInfo;
 
                 legendInfo += '<div data-value="0"><span style="background:' + 
