--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="author" content="Chris">
     <meta name="author" content="Rich">
-    <meta name="description" content="map of confederate monuments or yet to be determined">
+    <meta name="description" content="Map of Confederate Monuments by Congressional District">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Libre+Franklin" type="text/css">
     <link href="https://api.mapbox.com/mapbox-assembly/v0.19.0/assembly.min.css" rel="stylesheet">
